[package]
name = "Nightbaron"
version = "1.0.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
hex = "0.4"
chacha20poly1305 = "0.10"
rand = "0.8"
tar = "0.4"
eframe = "0.29"
rfd = "0.15"
zeroize = { version = "1.7", features = ["derive"] }
memsec = "0.6"
subtle = "2.5"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_System_Memory", "Win32_Foundation", "Win32_System_ProcessStatus", "Win32_System_Power", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9"