[package]
name = "Nightbaron"
version = "1.0.1"
edition = "2024"

[dependencies]
argon2 = "0.5"
hex = "0.4"
chacha20poly1305 = "0.10"
rand = "0.8"
tar = "0.4"
eframe = "0.29"
rfd = "0.15"
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.5"
xz2 = { version = "0.1.7", features = ["tokio"] }
walkdir = "2.5.0"
